--- a/funcoes.html
+++ b/funcoes.html
@@ -29,6 +29,7 @@
 		}
 		*/
 
+		/*
 		function soma(a, b) {
 			//b = b === undefined ? 0 : b
 			return a + b
@@ -38,7 +39,21 @@
 		console.log(soma(7, 7, 9, 15)) //descosidera os parâmetros adicionais
 		console.log(soma(7))
 		console.log(soma())
+		*/
+
+		function soma() {
+			var resultado = 0
+			for(var i in arguments) {
+				resultado += arguments[i]
+			}
+
+			return resultado
+		}
 		
+		console.log(soma(7, 5, 3.2, 0.8, 'Texto')) 
+			
+	
+
 	</script>
 </head>
 </body>
