--- a/app2/app.html
+++ b/app2/app.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
+	<head>
+		<meta charset="utf-8">
+			<title></title>
 
-	<script src="jogo.js"></script>
-</head>
-<body onresize=" ajustaTamanhoPalcoJogo()">
+			<link rel="stylesheet"  href="estilo.css" />
+			<script src="jogo.js"></script>
+	</head>
+	<body onresize=" ajustaTamanhoPalcoJogo()">
 
-</body>
+			<script>
+				posicaoRandomica()
+			</script>
+	</body>
 </html>
